samples/by-property/invalid/non-atomic2.bspl
../../tests/non-atomic2.bspl